arm/nsg-template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "environment": {
      "type": "string"
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]"
    },
    "resourceNamePrefix": {
      "type": "string"
    },
    "agwNsgNameSuffix": {
      "type": "string"
    },
    "aksNsgNameSuffix": {
      "type": "string"
    },
    "agwSubnetAddressPrefix": {
      "type": "string"
    },
    "aksSubnetAddressPrefix": {
      "type": "string"
    }
  },
  "functions": [],
  "variables": {
    "aks-nsg-name": "[concat(parameters('resourceNamePrefix'), '-', parameters('environment'), '-', parameters('aksNsgNameSuffix'))]",
    "agw-nsg-name": "[concat(parameters('resourceNamePrefix'), '-', parameters('environment'), '-', parameters('agwNsgNameSuffix'))]"
  },
  "resources": [
    {
      "name": "[variables('agw-nsg-name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "INT-T443-IN-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[parameters('agwSubnetAddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "INT-T80-IN-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "[parameters('agwSubnetAddressPrefix')]",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "AKS-T443-OUT-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('agwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "[parameters('aksSubnetAddressPrefix')]",
              "access": "Allow",
              "priority": 102,
              "direction": "Outbound"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('aks-nsg-name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AGW-T443-IN-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('agwSubnetAddressPrefix')]",
              "destinationAddressPrefix": "[parameters('aksSubnetAddressPrefix')]",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    }
  ],
  "outputs": {}
}
