arm/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {},
  "functions": [],
  "variables": {},
  "resources": [
    {
      "name": "iac-dev-agw-nsg",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "INT-T443-IN-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "10.112.16.128/25",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
                    {
            "name": "INT-T80-IN-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "10.112.16.128/25",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
                    {
            "name": "AKS-T443-OUT-ALLOW",
            "properties": {
              "description": "",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "10.112.16.128/25",
              "destinationAddressPrefix": "10.112.0.0/20",
              "access": "Allow",
              "priority": 102,
              "direction": "Outbound"
            }
          }
        ]
      }
    }
  ],
  "outputs": {}
}
